--- a/S3 Bucket Policy for CloudFront Access/index.html
+++ b/S3 Bucket Policy for CloudFront Access/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1>Hello world!</h1>
-  <p>I'm hosted on Amazon S3!</p>
+  <p>Need help with your puzzles?  I have a dog for you!</p>
   <img src="Surprised_dog.jpg">
 </body>
 </html>
